--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <body>
     <div class="container">
         <img src="logo.png" alt="Logo da Sauter University" class="logo">
-        <h1>Bem-vindo à Sauter University</h1>
+        <h1>Bem-vindo à Sauter University!!!</h1>
         <p>Treine seus conhecimentos e alcance seus objetivos!</p>
     </div>
 </body>
